FE:fixed the navbar layout issue

--- a/my-blog/src/NavBar.css
+++ b/my-blog/src/NavBar.css
@@ -80,7 +80,9 @@
 }
 
 .navbar__auth {
-  margin-left: 1.5rem;
+  margin-left: 1.25rem;
+  padding-left: 1.25rem;
+  border-left: 1px solid var(--color-border);
 }
 
 .navbar__auth-link {
